# env-map-projector

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  gui_plan.md  imgui.ini  output.txt  vcpkg.json
.github/workflows/: cmake-multi-platform.yml  codeql.yml
apps/gui/: ConversionController.cpp  ConversionController.h  FileDialog.cpp  FileDialog.h  GuiApp.cpp  GuiApp.h  GuiState.h  ImageSlot.cpp  ImageSlot.h  InputPanel.cpp  InputPanel.h  OutputPanel.cpp  OutputPanel.h  main.cpp
apps/nogui/: main.cpp
assets/skybox_big/: credits.txt
lib/imgui/examples/example_glfw_opengl3/: imgui.ini
src/: BaseProjection.h  Coords3dContainer.cpp  Coords3dContainer.h  CoordsContainer.h  CoordsContainer2d.cpp  CoordsContainer2d.h  CubeMapProjection.cpp  CubeMapProjection.h  EnvMapImage.cpp  EnvMapImage.h  EquirectangularProjection.cpp  EquirectangularProjection.h  ImageReader.cpp  ImageReader.h  ImageWriter.cpp  ImageWriter.h  Point2d.h  Point3d.h  Point3dCloud.h  PointCloud.h  PointCloud2d.h  SkyboxProjection.cpp  SkyboxProjection.h  SphereCoordsContainer.cpp  SphereCoordsContainer.h  SpherePoint.h  SpherePointCloud.h  SphericalCoord.h  main.cpp
src/Coordinates/: CoordContainerBase.h  CoordContainerHemiSpherical.cpp  CoordContainerHemiSpherical.h  CoordContainerSkybox.cpp  CoordContainerSkybox.h  CoordContainerSpherical.cpp  CoordContainerSpherical.h  CoordConversions.cpp  CoordConversions.h  HemisphereSurf.h  Point3d.h  PointSphere.h  SkyboxSurf.h
src/Projections/: EquirectangularProjection.cpp  EquirectangularProjection.h  HemisphericalProjection.cpp  HemisphericalProjection.h  SkyboxProjection.cpp  SkyboxProjection.h  SkydomeProjection.cpp  SkydomeProjection.h
src/Utils/: EnvMapImage.cpp  EnvMapImage.h  ImageReader.cpp  ImageWriter.cpp  ProjectionSizing.cpp  ProjectionSizing.h
tests/: ConversionTests.cpp  CoordContainerHemiSphericalTests.cpp  CoordContainerSkyboxTests.cpp  CoordContainerSphericalTests.cpp  CoordConversionTests.cpp  CoordsContainer2dTests.cpp  EnvMapImageTests.cpp  EquirectangularProjectionTests.cpp  HemisphericalProjectionTests.cpp  ImageReaderTests.cpp  ImageWriterTests.cpp  ProjectionSizingTests.cpp  SkyboxProjectionTests.cpp  SkydomeProjectionTests.cpp  SphereCoordsContainerTests.cpp  test_main.cpp
